0.7.1 - 0.7.2
-------------

	* migrating to ruby-debug-ide
	* ability to pass base directory (needed e.g. for Rails debugging)
	* ability to disable/enable a breakpoint
	* addition of RubyThread.runTo(path, line) feature
	* cleaner process termination control
	* fast debugger also includes Descriptor.getAddtionalOptions()
	* timeout before killing process to give the IO readers better chance to
		finish last pieces of IOs
	* send 'exit' to rdebug-ide when process termination is forced

0.7.0 - 0.7.1
-------------

	* added possibility to specify timeout until ReadersSupport gives up
	* RubyDebuggerProxy.checkConnection() fixed for ruby-debug
	* propagating RubyDebuggerException to the client (frontend)
	* fixed NPE during reading a number of added breakpoint
	* ability to synchronize $stderr and $stdout
	* ability to pass additional debugger options
	* ability to pass arguments to the debuggee
	* fixed ConcurrentModificationException in RubyDebuggerProxy
	* change/fixed breakpoint addition/removing. Removed index from
	  IRubyBreakpoint interface. Frontend is not supposed to care about internal
	  communication details between the library and backend.
